crates/bijux-dna-pipelines/tests/snapshots/bijux-dna-pipelines__contracts__fastq_reference_adna_profile_golden.snap
---
source: crates/bijux-dna-pipelines/tests/contracts/profiles/profiles.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "param_hashes": {
    "fastq.correct_errors": "b76d871d5a4d594517fd85d2ee108177a5e1612d5fcdba4c2759dcb69485235b",
    "fastq.detect_adapters": "3aeada62713ccc30dc0a7212b809e1775eccef0815376bba2864fa88683d7278",
    "fastq.extract_umis": "ed924bf5ac256fcb8875f53af7f9a5ff3e6c4a9b22093b44ed6ee0f6d51010de",
    "fastq.filter_low_complexity": "9f87c0a7b5bd23cfe60b142cce2543a36e028dc02c5b5353d6c7971772c4eb50",
    "fastq.filter_reads": "578cf743a57ec9554533b5b78fca6c48138b36cf39d1e953ea2e9dcea35b3df3",
    "fastq.merge_pairs": "901ef59fec923ad622dee9a264439472514d1fb683b21728ccd5ad6791c753a5",
    "fastq.profile_overrepresented_sequences": "1148dbfe778e358b62df082e88ac7a441d2306439ef79249318a1b7048b23e6c",
    "fastq.profile_read_lengths": "1148dbfe778e358b62df082e88ac7a441d2306439ef79249318a1b7048b23e6c",
    "fastq.profile_reads": "1148dbfe778e358b62df082e88ac7a441d2306439ef79249318a1b7048b23e6c",
    "fastq.report_qc": "f741ea102c415a31180221994ca5f82f091b95889703e1eed8af7ce22956b0a3",
    "fastq.screen_taxonomy": "8afc262ccf1b3ae32383964a3bf231d1fe67fde7225913b64bf6d0beb29c2aaf",
    "fastq.trim_polyg_tails": "1a45d6542079e3efce2f7b54c7f74d744f7ac11eab03268601d00fa89b011c5e",
    "fastq.trim_reads": "34e3c83c409e09fc55a46a3027746ace54ab5925836028915d34966a8de6827a",
    "fastq.trim_terminal_damage": "6dcc9d34f72ad023a048e4b21a68ae04c5de598096a8e44ac5299ba821e969e9",
    "fastq.validate_reads": "db9c11dd97dff0eae3d590d4e1cdaa041cce4b3c277285e23c1df12c466d4734"
  },
  "profile_id": "fastq-to-fastq__reference_adna__v1",
  "required_stages": [
    "fastq.validate_reads",
    "fastq.profile_read_lengths",
    "fastq.detect_adapters",
    "fastq.trim_polyg_tails",
    "fastq.trim_terminal_damage",
    "fastq.trim_reads",
    "fastq.filter_reads",
    "fastq.profile_reads",
    "fastq.profile_overrepresented_sequences",
    "fastq.report_qc",
    "fastq.filter_low_complexity",
    "fastq.merge_pairs"
  ],
  "tool_ids": {
    "fastq.correct_errors": "rcorrector",
    "fastq.detect_adapters": "fastqc",
    "fastq.extract_umis": "umi_tools",
    "fastq.filter_low_complexity": "bbduk",
    "fastq.filter_reads": "fastp",
    "fastq.merge_pairs": "vsearch",
    "fastq.profile_overrepresented_sequences": "fastqc",
    "fastq.profile_read_lengths": "seqkit_stats",
    "fastq.profile_reads": "seqkit_stats",
    "fastq.report_qc": "multiqc",
    "fastq.screen_taxonomy": "kraken2",
    "fastq.trim_polyg_tails": "fastp",
    "fastq.trim_reads": "fastp",
    "fastq.trim_terminal_damage": "cutadapt",
    "fastq.validate_reads": "fastqvalidator"
  }
}
